# seimei

./: .gitignore  Cargo.toml  LICENSE  README.md  about.hbs  about.toml  deny.toml
.cargo/: config.toml
crates/vrm-seimei/: Cargo.toml
crates/vrm-seimei/examples/: parity.rs  viewer.rs
crates/vrm-seimei/src/: clips.rs  control.rs  lib.rs  lipsync.rs  spring.rs
crates/vrm-viewer/: Cargo.toml
crates/vrm-viewer/src/: main.rs
examples/: vrm_probe.rs
shaders/: pbr.wgsl  pbr_shadow.wgsl  refraction.wgsl
shaders/lib/: noise.wgsl  raymarch.wgsl  sdf.wgsl
src/: camera.rs  dof.rs  gltf.rs  lib.rs  light.rs  math.rs  mesh.rs  pipeline.rs  ply.rs  post_process.rs  procedural.rs  quality.rs  ray.rs  renderer.rs  shader_lib.rs  shadow.rs  splat.rs  ssr.rs  texture.rs  vertex.rs
