[package]
name = "vrm-seimei"
version = "0.1.0"
edition = "2024"
description = "Bridge between vrm-anatomy (CPU skinning / VRM SDK) and seimei (wgpu renderer)"
license = "MIT"

[dependencies]
seimei = { path = "../.." } # workspace-internal: resolves inside the seimei repo even when fetched as a git dep
vrm-anatomy = { git = "https://github.com/Mutafika/vrm-anatomy.git", tag = "v0.1.0" }
serde_json = "1.0"
glam = "0.29"

# `viewer` example only: a live winit window + wgpu surface to drive the avatar
# dynamically (per-frame render_to_view), with an egui button bar for control.
[dev-dependencies]
wgpu = "24"
winit = "0.30"
pollster = "0.4"
egui = "0.31"
egui-wgpu = "0.31"
egui-winit = "0.31"
