[package]
name = "vrm-viewer"
version = "0.1.0"
edition = "2024"
description = "Standalone live VRM viewer — Sabitori SceneApp shell over the vrm-seimei avatar controller"
license = "MIT"

[[bin]]
name = "vrm-viewer"
path = "src/main.rs"

[dependencies]
seimei = { path = "../.." }
vrm-seimei = { path = "../vrm-seimei" } # VrmAvatar + AvatarController (the live-avatar driver)
# Same Sabitori tag mearie pins — its `SceneApp` composites seimei's 3D render with a
# declarative UI overlay (the exact path mearie's persona will use).
sabitori = { git = "https://github.com/Mutafika/sabitori.git", tag = "v0.1.5" }
wgpu = "24"
glam = "0.29"
